# SFUpdateChecker

./: CMakeLists.txt  README.md  best_release.json  main.cpp  mainwindow.cpp  mainwindow.h  rss.xml
